indicator-china-weather (3.0.0-0ubuntu1) cosmic; urgency=low

  * Used the latest version of heweather API.
  * New UI with Qt5.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Wed, 05 Sep 2018 16:06:50 +0800

indicator-china-weather (2.2.8-0ubuntu1) bionic; urgency=medium

  * Remove "Recommends: python-apport" in the control file.
    (LP: #1763732)
  * Fix the bug that the aboutdialog failed to popped out.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Tue, 17 Apr 2018 10:29:19 +0800

indicator-china-weather (2.2.7-0ubuntu1) bionic; urgency=medium

  * Remove "StartupNotify=true" in the desktop file.
  * debian/compat: 9 -> 11
  * debian/control:
    - Bump debhelper requirement for compat
    - Bump std-ver: 3.9.5 -> 4.1.3
  * Add debian/watch file.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 19 Mar 2018 14:04:57 +0800

indicator-china-weather (2.2.6-0ubuntu1) artful; urgency=medium

  * Optimize data processing at weather server.
  * Optimize city additions with GObject.idle.

 -- lixiang <lixiang@kylinos.cn>  Thu, 31 Aug 2017 17:34:05 +0800

indicator-china-weather (2.2.5-0ubuntu1) artful; urgency=medium

  * Determine the whether data is empty or not.

 -- lixiang <lixiang@kylinos.cn>  Tue, 29 Aug 2017 17:06:02 +0800

indicator-china-weather (2.2.4-0ubuntu1) artful; urgency=medium

  * Modify forecast with thread daemon and idle.
  * Add retry button when access forecast data failed.

 -- lixiang <lixiang@kylinos.cn>  Wed, 09 Aug 2017 22:14:26 +0800

indicator-china-weather (2.2.3-0ubuntu1) artful; urgency=medium

  * Change weather api.
  * More detailed three day weather forecast.
  * Weather forecast with thread.

 -- lixiang <lixiang@kylinos.cn>  Wed, 28 Jun 2017 13:52:16 +0800

indicator-china-weather (2.2.1-0ubuntu1) zesty; urgency=medium

  * [ Jeremy Bicha <jbicha@ubuntu.com> ] debian/control:
    - Depend on gir1.2-appindicator3-0.1 and python-gi instead of no longer
      used python-appindicator, python-gobject, and python-gtk2